--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,11 @@
 			<version>3.1.4.RELEASE</version>
 		</dependency>
 
-
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.2</version>
+		</dependency>
 
 	</dependencies>
 
